migration/baile/baile-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baile
spec:
  selector:
    matchLabels:
      app: baile
  template:
    metadata:
      labels:
        app: baile
    spec:
      containers:
      - name: baile
        image: knoldusstudio9/baile:1.0
        resources: {}
        ports:
        - containerPort: 9000
