migration/baile/baile-service.yml
apiVersion: v1
kind: Service
metadata:
  name: baile
spec:
  selector:
    app: baile
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: comms
    port: 9001
    targetPort: 9001
    protocol: TCP
  type: ClusterIP
