migration/baile/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baile
spec:
  ingressClassName: nginx
  rules:
  - host: baile.s9.devopscloud.link
    http:
      paths:
      - backend:
          service:
            name: baile
            port:
              number: 9000
        path: /
        pathType: Prefix
